--- a/test-output/old/Add a Schema/methods-alphabetical.html
+++ b/test-output/old/Add a Schema/methods-alphabetical.html
@@ -1,58 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Add a Schema</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAllAttributesButton(org.testng.ITestContext)[pri:4, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddAllAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:06</td>   <td>34997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAttributesButton(java.lang.String, org.testng.ITestContext)[pri:6, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:17:06</td>   <td>-144564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddNewDashboard(java.lang.String, int, java.lang.String, org.testng.ITestContext)[pri:1, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddNewDashboard</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:18:08</td>   <td>-82083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddSchema(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddSchema</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:04</td>   <td>-27055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.DeleteSchema(java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">DeleteSchema</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:16:12</td>   <td>-199081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Login(java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">Login</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:42</td>   <td>131878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Logout(java.lang.String)[pri:12, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">Logout</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:08</td>   <td>97703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveDownButton(org.testng.ITestContext)[pri:11, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveDownButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:34</td>   <td>123019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToBottomButton(org.testng.ITestContext)[pri:12, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveToBottomButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:48</td>   <td>77308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToTopButton(org.testng.ITestContext)[pri:8, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveToTopButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:53</td>   <td>82025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveUpButton(org.testng.ITestContext)[pri:10, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveUpButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:51</td>   <td>19963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAllAttributesButton(java.lang.String, org.testng.ITestContext)[pri:5, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">RemoveAllAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:19</td>   <td>48485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAttributeButton(java.lang.String, org.testng.ITestContext)[pri:7, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">RemoveAttributeButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:16:11</td>   <td>-199100</td> <td>&nbsp;</td><td title="&gt;&gt;AddSchemaToTheViewlet.beforeTest()[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:17:05</td>   <td>-145170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:18:07</td>   <td>-83375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:02</td>   <td>-28351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:29</td>   <td>-1254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:49</td>   <td>18551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:04</td>   <td>33683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:18</td>   <td>47269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:47</td>   <td>75957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:51</td>   <td>80395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:07</td>   <td>96425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:32</td>   <td>121239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:41</td>   <td>130475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:22:23</td>   <td>172142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAllAttributesButton(org.testng.ITestContext)[pri:4, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddAllAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:15</td>   <td>44575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAttributesButton(java.lang.String, org.testng.ITestContext)[pri:6, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:19:50</td>   <td>-221037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddNewDashboard(java.lang.String, int, java.lang.String, org.testng.ITestContext)[pri:1, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddNewDashboard</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:21:00</td>   <td>-150336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddSchema(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddSchema</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:22:40</td>   <td>-50346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.DeleteSchema(java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">DeleteSchema</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:18:39</td>   <td>-291168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Login(java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">Login</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:58</td>   <td>206977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Logout(java.lang.String)[pri:15, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">Logout</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:25</td>   <td>173912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveDownButton(org.testng.ITestContext)[pri:11, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveDownButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:41</td>   <td>130159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToBottomButton(org.testng.ITestContext)[pri:9, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveToBottomButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:14</td>   <td>102900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToTopButton(org.testng.ITestContext)[pri:8, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveToTopButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:05</td>   <td>154783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveUpButton(org.testng.ITestContext)[pri:10, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveUpButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:57</td>   <td>26273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAllAttributesButton(java.lang.String, org.testng.ITestContext)[pri:5, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">RemoveAllAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:33</td>   <td>62665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAttributeButton(java.lang.String, org.testng.ITestContext)[pri:7, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">RemoveAttributeButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:18:39</td>   <td>-291195</td> <td>&nbsp;</td><td title="&gt;&gt;AddSchemaToTheViewlet.beforeTest()[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:19:49</td>   <td>-221631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:20:59</td>   <td>-151672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:22:39</td>   <td>-51677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:30</td>   <td>-1032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:56</td>   <td>25167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:14</td>   <td>43529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:32</td>   <td>61627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:12</td>   <td>101818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:40</td>   <td>129104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:04</td>   <td>153666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:24</td>   <td>172890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:57</td>   <td>205953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:27:41</td>   <td>250111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
 </table>
