--- a/test-output/old/Add a Schema/methods.html
+++ b/test-output/old/Add a Schema/methods.html
@@ -1,58 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Add a Schema</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:16:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AddSchemaToTheViewlet.beforeTest()[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:16:12</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Login(java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">Login</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:17:05</td>   <td>53930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:17:06</td>   <td>54536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddNewDashboard(java.lang.String, int, java.lang.String, org.testng.ITestContext)[pri:1, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddNewDashboard</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:18:07</td>   <td>115725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:18:08</td>   <td>117017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddSchema(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddSchema</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:02</td>   <td>170749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:04</td>   <td>172045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.DeleteSchema(java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">DeleteSchema</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:29</td>   <td>197846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:31</td>   <td>199100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAllAttributesButton(org.testng.ITestContext)[pri:4, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddAllAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:49</td>   <td>217651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:19:51</td>   <td>219063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAllAttributesButton(java.lang.String, org.testng.ITestContext)[pri:5, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">RemoveAllAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:04</td>   <td>232783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:06</td>   <td>234097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAttributesButton(java.lang.String, org.testng.ITestContext)[pri:6, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">AddAttributesButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:18</td>   <td>246369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:19</td>   <td>247585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAttributeButton(java.lang.String, org.testng.ITestContext)[pri:7, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">RemoveAttributeButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:47</td>   <td>275057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:48</td>   <td>276408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToTopButton(org.testng.ITestContext)[pri:8, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveToTopButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:51</td>   <td>279495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:20:53</td>   <td>281125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveUpButton(org.testng.ITestContext)[pri:10, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveUpButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:07</td>   <td>295525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:08</td>   <td>296803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveDownButton(org.testng.ITestContext)[pri:11, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveDownButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:32</td>   <td>320339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:34</td>   <td>322119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToBottomButton(org.testng.ITestContext)[pri:12, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">MoveToBottomButton</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:41</td>   <td>329575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:21:42</td>   <td>330978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Logout(java.lang.String)[pri:12, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">Logout</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 12:22:23</td>   <td>371242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@27e47833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:18:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AddSchemaToTheViewlet.beforeTest()[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:18:39</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Login(java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">Login</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:19:49</td>   <td>69564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:19:50</td>   <td>70158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddNewDashboard(java.lang.String, int, java.lang.String, org.testng.ITestContext)[pri:1, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddNewDashboard</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:20:59</td>   <td>139523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:21:00</td>   <td>140859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddSchema(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddSchema</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:22:39</td>   <td>239518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:22:40</td>   <td>240849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.DeleteSchema(java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">DeleteSchema</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:30</td>   <td>290163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:31</td>   <td>291195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAllAttributesButton(org.testng.ITestContext)[pri:4, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddAllAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:56</td>   <td>316362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:23:57</td>   <td>317468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAllAttributesButton(java.lang.String, org.testng.ITestContext)[pri:5, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">RemoveAllAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:14</td>   <td>334724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:15</td>   <td>335770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.AddAttributesButton(java.lang.String, org.testng.ITestContext)[pri:6, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">AddAttributesButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:32</td>   <td>352822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:24:33</td>   <td>353860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.RemoveAttributeButton(java.lang.String, org.testng.ITestContext)[pri:7, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">RemoveAttributeButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:12</td>   <td>393013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:14</td>   <td>394095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToTopButton(org.testng.ITestContext)[pri:8, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveToTopButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:40</td>   <td>420299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:25:41</td>   <td>421354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveToBottomButton(org.testng.ITestContext)[pri:9, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveToBottomButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:04</td>   <td>444861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:05</td>   <td>445978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveUpButton(org.testng.ITestContext)[pri:10, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveUpButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:24</td>   <td>464085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:25</td>   <td>465107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.MoveDownButton(org.testng.ITestContext)[pri:11, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">MoveDownButton</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:57</td>   <td>497148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:26:58</td>   <td>498172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSchemaToTheViewlet.Logout(java.lang.String)[pri:15, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">Logout</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 17:27:41</td>   <td>541306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddSchemaToTheViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.AddSchemaToTheViewlet@51e69659]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
 </table>
