--- a/test-output/old/Navigator/classes.html
+++ b/test-output/old/Navigator/classes.html
@@ -4,26 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ApodGUI.ClusterQueueManager</td>
+<td>KafkaGUI.KafkaSchemaViewlet</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddToFavoriteForMultipleClusterQMs</td>
+<td>Events</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CompareClusterQueueManagers</td>
+<td>Properties</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClusterQMEvents</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>CheckDifferencesForClusterQMs</td>
+<td>ShowObjectAttributes</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -36,14 +32,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>Login</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddClusterQueueManagerViewlet</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ShowObjectAttributesForClusterQM</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
