--- a/test-output/old/Navigator/methods.html
+++ b/test-output/old/Navigator/methods.html
@@ -1,42 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Navigator</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:02:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ClusterQueueManager.beforeTest()[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:02:38</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">Login</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:04:20</td>   <td>101829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:04:20</td>   <td>101988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.AddClusterQueueManagerViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.ClusterQueueManager@71a8adcf]">AddClusterQueueManagerViewlet</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:04:57</td>   <td>139405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:04:58</td>   <td>140404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.ClusterQMEvents(java.lang.String, org.testng.ITestContext)[pri:3, instance:ApodGUI.ClusterQueueManager@71a8adcf]">ClusterQMEvents</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:05:46</td>   <td>187733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:05:47</td>   <td>188987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:4, instance:ApodGUI.ClusterQueueManager@71a8adcf]">AddToFavoriteViewlet</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:07:23</td>   <td>285156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:07:24</td>   <td>286092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.CompareClusterQueueManagers(java.lang.String, org.testng.ITestContext)[pri:5, instance:ApodGUI.ClusterQueueManager@71a8adcf]">CompareClusterQueueManagers</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:08:08</td>   <td>330484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:08:09</td>   <td>331499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.CheckDifferencesForClusterQMs(org.testng.ITestContext)[pri:6, instance:ApodGUI.ClusterQueueManager@71a8adcf]">CheckDifferencesForClusterQMs</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:08:31</td>   <td>353472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:08:32</td>   <td>354432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.AddToFavoriteForMultipleClusterQMs(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:7, instance:ApodGUI.ClusterQueueManager@71a8adcf]">AddToFavoriteForMultipleClusterQMs</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:09:18</td>   <td>399900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:09:19</td>   <td>400871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.ShowObjectAttributesForClusterQM(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:8, instance:ApodGUI.ClusterQueueManager@71a8adcf]">ShowObjectAttributesForClusterQM</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:10:34</td>   <td>476303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:10:35</td>   <td>477584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClusterQueueManager.Logout(java.lang.String)[pri:11, instance:ApodGUI.ClusterQueueManager@71a8adcf]">Logout</td> 
-  <td>main@1422238463</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/01/30 16:11:02</td>   <td>504254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClusterQueueManager.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.ClusterQueueManager@71a8adcf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:19:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;KafkaSchemaViewlet.beforeTest()[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:19:14</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Login</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:20:17</td>   <td>62551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:20:17</td>   <td>62751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Properties(java.lang.String, org.testng.ITestContext)[pri:2, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Properties</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:20:39</td>   <td>84386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:20:40</td>   <td>85287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Events(java.lang.String, org.testng.ITestContext)[pri:3, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Events</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:21:27</td>   <td>132381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:21:28</td>   <td>133302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:6, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">AddToFavoriteViewlet</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:22:08</td>   <td>173917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:22:09</td>   <td>174861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.ShowObjectAttributes(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:11, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">ShowObjectAttributes</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:22:35</td>   <td>200702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:22:36</td>   <td>201614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Logout(java.lang.String)[pri:27, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Logout</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/21 14:23:03</td>   <td>228519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
 </table>
