--- a/test-output/old/Testing Viewlet Filters/methods-alphabetical.html
+++ b/test-output/old/Testing Viewlet Filters/methods-alphabetical.html
@@ -1,46 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Testing Viewlet Filters</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:36:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.AdvancedViewletFiletercheckbox(org.testng.ITestContext)[pri:1, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">AdvancedViewletFiletercheckbox</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:37:50</td>   <td>78300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.AttributeFilter(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:4, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">AttributeFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:39:25</td>   <td>172702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.EmptyCheckboxFilter(org.testng.ITestContext)[pri:5, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">EmptyCheckboxFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:34:46</td>   <td>-105918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">Login</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:41:45</td>   <td>313134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.Logout(java.lang.String)[pri:30, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">Logout</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:36:46</td>   <td>13882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ManagerFilter(org.testng.ITestContext)[pri:2, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">ManagerFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:37:26</td>   <td>53814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ObjectFilter(org.testng.ITestContext)[pri:3, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">ObjectFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:40:58</td>   <td>266055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ResultLimitFilter(org.testng.ITestContext)[pri:7, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">ResultLimitFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:40:46</td>   <td>253730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.SystemCheckboxFilter(org.testng.ITestContext)[pri:6, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">SystemCheckboxFilter</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:41:22</td>   <td>290526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ViewletCheckboxClear(org.testng.ITestContext)[pri:8, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">ViewletCheckboxClear</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:34:46</td>   <td>-105933</td> <td>&nbsp;</td><td title="&gt;&gt;ViewletFilterOptions.beforeTest()[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:36:32</td>   <td>-251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:36:45</td>   <td>12670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:37:25</td>   <td>52725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:37:49</td>   <td>77184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:39:23</td>   <td>171564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:40:44</td>   <td>252615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:40:57</td>   <td>264900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:41:21</td>   <td>289406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:41:44</td>   <td>311984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/08 15:42:34</td>   <td>362091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@42a15bdc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:24:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.AdvancedViewletFiletercheckbox(org.testng.ITestContext)[pri:1, instance:NavigatorCore.ViewletFilterOptions@82de64a]">AdvancedViewletFiletercheckbox</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:26:45</td>   <td>152509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.AttributeFilter(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:4, instance:NavigatorCore.ViewletFilterOptions@82de64a]">AttributeFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:29:52</td>   <td>339538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.EmptyCheckboxFilter(org.testng.ITestContext)[pri:5, instance:NavigatorCore.ViewletFilterOptions@82de64a]">EmptyCheckboxFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:21:01</td>   <td>-191164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">Login</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:32:33</td>   <td>501204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.Logout(java.lang.String)[pri:30, instance:NavigatorCore.ViewletFilterOptions@82de64a]">Logout</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:24:48</td>   <td>35670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ManagerFilter(org.testng.ITestContext)[pri:2, instance:NavigatorCore.ViewletFilterOptions@82de64a]">ManagerFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:26:02</td>   <td>109903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ObjectFilter(org.testng.ITestContext)[pri:3, instance:NavigatorCore.ViewletFilterOptions@82de64a]">ObjectFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:30:11</td>   <td>359210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ResultLimitFilter(org.testng.ITestContext)[pri:7, instance:NavigatorCore.ViewletFilterOptions@82de64a]">ResultLimitFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:29:54</td>   <td>342098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.SystemCheckboxFilter(org.testng.ITestContext)[pri:6, instance:NavigatorCore.ViewletFilterOptions@82de64a]">SystemCheckboxFilter</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:32:00</td>   <td>468068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ViewletFilterOptions.ViewletCheckboxClear(org.testng.ITestContext)[pri:8, instance:NavigatorCore.ViewletFilterOptions@82de64a]">ViewletCheckboxClear</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:21:01</td>   <td>-191191</td> <td>&nbsp;</td><td title="&gt;&gt;ViewletFilterOptions.beforeTest()[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:24:12</td>   <td>-293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:24:47</td>   <td>34590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:26:01</td>   <td>108865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:26:44</td>   <td>151463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:29:51</td>   <td>338502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:29:53</td>   <td>340400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:30:10</td>   <td>358127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:31:59</td>   <td>467068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:32:32</td>   <td>500150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/02/17 18:33:57</td>   <td>584587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ViewletFilterOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ViewletFilterOptions@82de64a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
 </table>
